--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Tustin/PlayStationDiscord.git"
+    "url": "git+https://github.com/SofianeLasri/PlayStationDiscord.git"
   },
   "keywords": [
     "discord",
@@ -73,7 +73,7 @@
   "author": "Tustin",
   "license": "GPL-3.0",
   "bugs": {
-    "url": "https://github.com/Tustin/PlayStationDiscord/issues"
+    "url": "https://github.com/SofianeLasri/PlayStationDiscord/issues"
   },
   "homepage": "https://tusticles.com/PlayStationDiscord/",
   "dependencies": {
@@ -85,7 +85,8 @@
     "electron-updater": "^4.0.6",
     "normalize.css": "^8.0.1",
     "progress-stream": "^2.0.0",
-    "query-string": "^6.2.0"
+    "query-string": "^6.2.0",
+    "slugify": "^1.6.5"
   },
   "devDependencies": {
     "@types/electron-store": "^1.3.0",
